fixed overlapping gifs and auth layout

--- a/style.css
+++ b/style.css
@@ -3,12 +3,6 @@ html{
 	width: 100%;
 }
 
-body-home {
-	margin: 0 0 0 0;
-	height: 100%;
-  width: 100%;
-}
-
 body {
 	margin: 0 0 0 0;
 	height: 100%;
@@ -53,6 +47,15 @@ body {
   top:50%;
 }
 
+#register-btn{
+  margin: auto;
+	height: 30%;
+  width: 100%;
+  position:absolute;
+  margin-left: 10%;
+  top:60%;
+}
+
 .btn {
   background-color: #00a10d;
   border: none;
@@ -77,15 +80,14 @@ body {
 	height: 85%;
 	width: 50%;
 	float: left;
-	overflow: hidden;
-	background-color: #ff3d00;
+  background-color: #ff3d00;
 }
 
 #contents-right{
 	margin: 0 0 0 0;
 	height: 85%;
 	width: 50%;
-	float: right;
+  float: right;
 	background-color: #9cffff;
 
 }
@@ -93,6 +95,8 @@ body {
 #left-margin {
 width: 50%;
 height: 90.2%;
+margin-top: 1.34%;
+bottom:0%;
 background-image: url("images/morphred.png");
 background-size: auto 90%;
 background-repeat: no-repeat;
@@ -109,11 +113,17 @@ float: right;
 	background-position: left bottom;
 }
 
-#inner{
-overflow: hidden;
+
+#inner-left{
 width: 100%;
 height: 100%;
 }
+
+#inner-right{
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  }
 
 #footer{
 overflow: hidden;
@@ -143,7 +153,33 @@ input[type=text], select {
   box-sizing: border-box;
 }
 
-input[type=password], select {
+input[type=log-password], select {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 4% 0 20% 10%;
+  display: inline-block;
+  height: 8%;
+  font-size: 0.8vw;
+  border: 3px solid #00a10d;
+  font-family: 'Spartan', sans-serif;
+  border-radius: 2rem;
+  box-sizing: border-box;
+}
+
+input[type=reg-password], select {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 4% 0 0 10%;
+  display: inline-block;
+  height: 8%;
+  font-size: 0.8vw;
+  border: 3px solid #00a10d;
+  font-family: 'Spartan', sans-serif;
+  border-radius: 2rem;
+  box-sizing: border-box;
+}
+
+input[type=re-password], select {
   width: 80%;
   padding: 12px 20px;
   margin: 4% 0 10% 10%;
@@ -177,7 +213,6 @@ p2 {
 	color: black;
   font-size: 1vw;
 }
-
 
 h1 {
 text-align: center;
@@ -227,7 +262,7 @@ h6 {
   text-align: center;
   color: #ffffff;
   font-size: 0.8vw;
-  margin-top: 28%;
+  margin-top: 20%;
   padding: 0 5% 0 5%;
   line-height: 160%;
   }
@@ -259,48 +294,48 @@ h6 {
   to{border-right-color: transparent;}
 }
 
-<style>
-    /*
-      Rollover Image
-     */
-    .figure {
-        width: 50%; /* can be omitted for a regular non-lazy image */
-        max-width: 50%;
-				position: absolute;
-    }
-    .figure img.image-hover {
-      position: absolute;
-      top: 0;
-			width: 50%; /* can be omitted for a regular non-lazy image */
-			max-width: 50%;
-      right: 0;
-      left: 0;
-      bottom: 0;
-      opacity: 0;
-      transition: opacity .2s;
-    }
-    .figure:hover img.image-hover {
-      opacity: 1;
-    }
+/*
+  Rollover Image
+  */
+.figure {
+    height: 100%;
+    width: 100%; /* can be omitted for a regular non-lazy image */
+    position: absolute;
+}
+.figure img.image-hover {
+  position: absolute;
+  top: 0;
+  width: 50%; /* can be omitted for a regular non-lazy image */
+  max-width: 50%;
+  max-height: 85%;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+  transition: opacity .2s;
+}
+.figure:hover img.image-hover {
+  opacity: 1;
+}
 
 
-		.figure-right {
-        width: 50%; /* can be omitted for a regular non-lazy image */
-        max-width: 50%;
-				position: absolute;
-    }
-    .figure-right img.image-hover {
-      position: absolute;
-      top: 0;
-			width: 100%; /* can be omitted for a regular non-lazy image */
-			max-width: 100%;
-      right: 0;
-      left: 0;
-      bottom: 0;
-      opacity: 0;
-      transition: opacity .2s;
-    }
-    .figure-right:hover img.image-hover {
-      opacity: 1;
-    }
-</style>
+.figure-right {
+    height: 100%;
+    width: 50%; /* can be omitted for a regular non-lazy image */
+    position: absolute;
+}
+.figure-right img.image-hover {
+  position: absolute;
+  top: 0;
+  width: 50%; /* can be omitted for a regular non-lazy image */
+  max-width: 100%;
+  max-height: 85%;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+  transition: opacity .2s;
+}
+.figure-right:hover img.image-hover {
+  opacity: 1;
+}
